// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LinkButton /> > renders as expected based on provided props 1`] = `
<button
  class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-lm-brand-dark tw:dark:highlight:text-dm-brand-dark tw:highlight:underline tw:px-3 tw:py-1.5 tw:cursor-pointer"
  type="button"
/>
`;

exports[`<LinkButton /> > renders as expected based on provided props 2`] = `
<button
  class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-lm-brand-dark tw:dark:highlight:text-dm-brand-dark tw:highlight:underline tw:px-3 tw:py-1.5 tw:pointer-events-none tw:opacity-65"
  disabled=""
  type="button"
/>
`;

exports[`<LinkButton /> > renders as expected based on provided props 3`] = `
<button
  class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-lm-brand-dark tw:dark:highlight:text-dm-brand-dark tw:highlight:underline tw:px-1.5 tw:py-1 tw:text-sm tw:cursor-pointer"
  type="button"
/>
`;

exports[`<LinkButton /> > renders as expected based on provided props 4`] = `
<button
  class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-lm-brand-dark tw:dark:highlight:text-dm-brand-dark tw:highlight:underline tw:px-3 tw:py-1.5 tw:cursor-pointer"
  type="button"
/>
`;

exports[`<LinkButton /> > renders as expected based on provided props 5`] = `
<button
  class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-lm-brand tw:dark:text-dm-brand tw:highlight:text-lm-brand-dark tw:dark:highlight:text-dm-brand-dark tw:highlight:underline tw:px-4 tw:py-2 tw:text-lg tw:cursor-pointer"
  type="button"
/>
`;
